--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "homepage": "https://github.com/pyc0422/neway-receipt-project#readme",
   "dependencies": {
+    "axios": "^1.1.3",
     "express": "^4.18.2",
     "jest": "^29.3.0",
     "localforage": "^1.10.0",
@@ -29,6 +30,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
+    "react-to-print": "^2.14.8",
     "react-uuid": "^2.0.0",
     "sort-by": "^1.2.0",
     "uuid": "^9.0.0"
