--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/pyc0422/neway-receipt-project#readme",
   "dependencies": {
     "axios": "^1.1.3",
+    "bootstrap": "^5.2.3",
     "express": "^4.18.2",
     "jest": "^29.3.0",
     "localforage": "^1.10.0",
@@ -29,6 +30,7 @@
     "path": "^0.12.7",
     "pg": "^8.8.0",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-to-print": "^2.14.8",
