--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/pyc0422/neway-receipt-project#readme",
   "dependencies": {
+    "@emotion/react": "^11.10.5",
+    "@emotion/styled": "^11.10.5",
+    "@mui/material": "^5.10.15",
+    "@mui/styled-engine-sc": "^5.10.14",
     "axios": "^1.1.3",
     "express": "^4.18.2",
     "jest": "^29.3.0",
@@ -29,12 +33,12 @@
     "path": "^0.12.7",
     "pg": "^8.8.0",
     "react": "^18.2.0",
-    "react-bootstrap": "^2.6.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.3",
     "react-to-print": "^2.14.8",
     "react-uuid": "^2.0.0",
     "sort-by": "^1.2.0",
+    "styled-components": "^5.3.6",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
